# pirrigator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Settings.toml  Settings.toml.rpi  install.sh  reset-gpio.sh  systemd.service
app/: .gitignore  Cargo.toml  Settings.toml  Settings.yaml  Settings.yaml.rpi  install.sh
app/.cargo/: config.toml
app/src/: button.rs  controller.rs  database.rs  event.rs  lib.rs  main.rs  moisture.rs  pirrigator.rs  settings.rs  time.rs  valve.rs  weather.rs
app/src/controller/: mod.rs  scheduler.rs  settings.rs
app/src/event/: button.rs  irrigate.rs  mod.rs  moisture.rs  weather.rs
app/src/server/: api.rs  camera.rs  error.rs  json.rs  middleware.rs  mod.rs  ui.rs
app/src/settings/: button.rs  controller.rs  database.rs  mod.rs  moisture.rs  valve.rs  weather.rs
bme280/: Cargo.toml  README.md
bme280/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  moisture.rs  time.rs  weather.rs
mcp3xxx/: Cargo.toml  README.md  mcp3xxx.py
mcp3xxx/src/: lib.rs  main.rs
rust-influxc/: .gitignore  Cargo.toml  LICENSE  README.md
rust-influxc/src/: auth.rs  builder.rs  client.rs  error.rs  example.rs  lib.rs  line.rs  measurement.rs  precision.rs  record.rs  value.rs
rust-influxc/src/backlogging/: file.rs  mod.rs
src/: button.rs  controller.rs  database.rs  event.rs  lib.rs  main.rs  middleware.rs  moisture.rs  server.rs  settings.rs  valve.rs  weather.rs
src/server/: api.rs  error.rs  json.rs  middleware.rs  mod.rs
ui/: Cargo.toml  Makefile  index.html  pirrigator.css
ui/src/: chart.rs  fetch.rs  lib.rs  main.rs  sensors.rs  utils.rs  weather.rs  zones.rs
