[package]
name = "pirrigator"
version = "0.1.0"
authors = ["Neil Gall <neilgall@mac.com>"]
edition = "2018"

[dependencies]
iron = "0.6.0"
rusqlite = "0.17.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
config = "0.9.2"
rustpi_io = "0.1.0"
bme280 = { path = "../bme280" }
mcp3xxx = { path = "../mcp3xxx" }
