[package]
name = "pirrigator"
version = "0.1.0"
authors = ["Neil Gall <neilgall@mac.com>"]
edition = "2018"

[dependencies]
iron = "0.6.0"
router = "0.6.0"
mount = "0.4.0"
logger = "0.4.0"
log = "0.4.0"
env_logger = "0.6.1"
rusqlite = "0.17.0"
r2d2 = "0.8.4"
r2d2_sqlite = "0.9.0"
iron-json-response = "0.6.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
config = "0.9.2"
rustpi_io = "0.1.0"
bme280 = { path = "../bme280" }
mcp3xxx = { path = "../mcp3xxx" }
