[package]
name = "pirrigator"
version = "0.1.0"
authors = ["Neil Gall <neilgall@mac.com>"]
edition = "2018"

[dependencies]
bme280 = { path = "../bme280" }
mcp3xxx = { path = "../mcp3xxx" }
common = { path = "../common" }
chrono = "0.4.11"
config = "0.9.2"
env_logger = "0.6.1"
iron = "0.6.0"
iron-json-response = "0.6.0"
lazy_static = "1.3.0"
lazy-static-include = "1.3.1"
log = "0.4.0"
logger = "0.4.0"
mount = "0.4.0"
r2d2 = "0.8.4"
r2d2_sqlite = "0.9.0"
router = "0.6.0"
rusqlite = "0.17.0"
rustpi_io = "0.1.0"
serde = "^1.0.110"
serde_derive = "^1.0.110"
sunrise = "1.0.0"
urlencoding = "1.0.0"