[package]
name = "pirrigator-ui"
version = "0.1.0"
authors = ["Neil Gall <neilgall@mac.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.6"
futures = "^0.1.26"
seed = "^0.3.3"
serde = "^1.0.8"
serde_derive = "^1.0.8"
urlencoding = "1.0.0"
wasm-bindgen = "0.2.43"
web-sys = "^0.3.19"
