[package]
name = "pirrigator-ui"
version = "0.1.0"
authors = ["Neil Gall <neilgall@mac.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
chrono = "0.4.11"
seed = "^0.7.0"
serde = "^1.0.110"
serde_derive = "^1.0.110"
urlencoding = "1.0.0"
wasm-bindgen = "0.2.62"
web-sys = "^0.3.39"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
